--- a/skript/maschinen.tex
+++ b/skript/maschinen.tex
@@ -188,7 +188,7 @@ der m"oglichen Pipeline-Stalls auf Kosten der Code-Gr"osse.
 \begin{beispiel}
 Der folgende Code kopiert Daten von einem Puffer {\tt a} in eine Puffer {\tt b}
 \begin{verbatim}
-char    a[length], b[length]
+char    a[length], b[length];
 // initialize
 for (int i = 0; i < length; i++) {
         b[i] = a[i];
