--- a/skript/maschinen.tex
+++ b/skript/maschinen.tex
@@ -189,7 +189,7 @@ der m"oglichen Pipeline-Stalls auf Kosten der Code-Gr"osse.
 \begin{beispiel}
 Der folgende Code kopiert Daten von einem Puffer {\tt a} in eine Puffer {\tt b}
 \begin{verbatim}
-char    a[length], b[length]
+char    a[length], b[length];
 // initialize
 for (int i = 0; i < length; i++) {
         b[i] = a[i];
@@ -230,9 +230,6 @@ Byte-Operation eine Operation mit einem gr"osseren Datentyp durchgef"uhrt wird:
 long    *p = (long *)a;
 long    *q = (long *)b;
 for (int i = 0; i < length; i += 4 * sizeof(long)) {
-        *q++ = *p++;
-        *q++ = *p++;
-        *q++ = *p++;
         *q++ = *p++;
 }
 \end{verbatim}
