--- a/aufgaben/aufgaben.tex
+++ b/aufgaben/aufgaben.tex
@@ -174,32 +174,31 @@ funktionierenden SSH Implementation.
 \hline
 Nr&Aufgabe&Team\\
 \hline
-\aufnr{ 1}&Crypto Cracking                &\\
+\aufnr{ 1}&Crypto Cracking                &Danilo Bargen, Lukas Murer\\
 \hline
-\aufnr{ 2}&CAT Scanner                    &Marco Bassotti, Dario Tr"utsch (1)\\
+\aufnr{ 2}&CAT Scanner                    &Marco Bassotti, Dario Tr"utsch\\
 \hline
-\aufnr{ 3}&Ising Modell                   &Daniel Monti, Pascal Stump (2)\\
+\aufnr{ 3}&Ising Modell                   &\\
 \hline
-\aufnr{ 4}&Kugelsternhaufen               &Daniel Monti, Pascal Stump (1)\\
-          &                               &Marco Bassotti, Dario Tr"utsch (2)\\
+\aufnr{ 4}&Kugelsternhaufen               &Flavio La Morea, Nicol\'as Rom\'an L"uthold\\
 \hline
-\aufnr{ 5}&quaternionisches Apfelm"annchen&Andreas Linggi, Stefan Steiner (1)\\
+\aufnr{ 5}&quaternionisches Apfelm"annchen&Tabea M\'endez, Christian Schmid\\
 \hline
 \aufnr{ 6}&Julia Mengen                   &\\
 \hline
-\aufnr{ 7}&OpenFOAM                       &\\
+\aufnr{ 7}&OpenFOAM                       &Gregor Dengler\\
 \hline
-\aufnr{ 8}&MapReduce                      &Daniel Monti, Pascal Stump (2)\\
+\aufnr{ 8}&MapReduce                      &Daniel Monti, Pascal Stump\\
 \hline
-\aufnr{ 9}&Monte Carlo                    &\\
+\aufnr{ 9}&Monte Carlo                    &Dorian Amiet, Hannes Badertscher\\
 \hline
 \aufnr{10}&SOR und SSOR                   &\\
 \hline
-\aufnr{11}&Potentialproblem               &\\
+\aufnr{11}&Potentialproblem               &Reto Christen, Philipp Solenthaler\\
 \hline
 \aufnr{12}&W"armeleitung                  &\\
 \hline
-\aufnr{13}&Greensche Funktion             &Andreas Linggi, Stefan Steiner (1)\\
+\aufnr{13}&Greensche Funktion             &Andreas Linggi, Stefan Steiner\\
 \hline
 \aufnr{14}&Stosswellen                    &Fabian Klein, Thomas Ziegler\\
 \hline
