--- a/skript/vorwort.tex
+++ b/skript/vorwort.tex
@@ -1,8 +1,9 @@
 \chapter*{Vorwort}
 \lhead{Vorwort}
 Dieses Skript entstand im Rahmen des Mathematischen Seminars
-im Fr"uhrjahrssemester 2014 an der Hochschule f"ur Technik Rapperswil.
-Die Teilnehmer, Studierende der Abteilung f"ur Elektrotechnik der
+im Fr"uhjahrssemester 2014 an der Hochschule f"ur Technik Rapperswil.
+Die Teilnehmer, Studierende der Abteilungen f"ur Elektrotechnik und
+Informatik der
 HSR, erarbeiteten nach einer Einf"uhrung in das Themengebiet jeweils
 einzelne Aspekte des Gebietes in Form einer Seminararbeit, "uber
 deren Resultate sie auch in einem Vortrag informierten. 
@@ -26,3 +27,4 @@ das zugeh"orige Code-Repository.
 Im genannten Repository findet sich auch der Source-Code dieses
 Skriptes, es wird hier unter einer Creative Commons Lizenz
 zur Verf"ugung gestellt.
+
