--- a/skript/heat/heat.tex
+++ b/skript/heat/heat.tex
@@ -525,5 +525,13 @@ die Variablen am Rande der Nachbarrechtecke ben"otigt.
 Nach jedem Iterationsschritt m"ussen diese Werte zwischen den einzelnen
 Prozessen ausgetauscht werden.
 
+\begin{figure}
+\begin{center}
+\includegraphics[width=\hsize]{heat/results-heat-threads.pdf}
+\end{center}
+\caption{Laufzeit der mit OpenMPI parallelisierten L"osung der
+W"armeleitungsgleichung in Abh"angigkeit von der Prozesszahl.
+\label{heat:threadzahl}}
+\end{figure}
 
 
