--- a/skript/heat/heat.tex
+++ b/skript/heat/heat.tex
@@ -599,8 +599,9 @@ zur Gesamtzahl der Prozesse zeigt.
 \end{center}
 \caption{Laufzeit der mit OpenMPI parallelisierten L"osung der
 W"armeleitungsgleichung in Abh"angigkeit von der Prozesszahl.
-Mehr als vier Prozesse gegen auf der verwendeten 4-Prozessor-Maschine
-keine verbesserte Laufzeit.
+Mehr als 20 Prozesse gegen auf der verwendeten 4-Prozessor-Maschine
+keine verbesserte Laufzeit, und die durch stochastischen
+Overhead verursachte Streuung dominiert die Laufzeit.
 \label{heat:threadzahl}}
 \end{figure}
 
